Bug 1804827: Improve monitoring dashboards table layout
* Make label columns wider to avoid wrapping
* Order label columns first
* Humanize `short` numbers
* Use horizontal scrolling even at mobile to reduce table height

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1804827

--- a/frontend/public/components/monitoring/_monitoring.scss
+++ b/frontend/public/components/monitoring/_monitoring.scss
@@ -16,6 +16,14 @@
   margin-right: 20px;
 }
 
+.monitoring-dashboards__label-column-header {
+  // Set a min-width to avoid aggressive wrapping, which makes the table much taller.
+  min-width: 175px;
+  @media (min-width: $screen-lg-min) {
+    min-width: 225px;
+  }
+}
+
 .monitoring-dashboards__options {
   display: flex;
   float: right;
